--- a/tty8.1
+++ b/tty8.1
@@ -4,7 +4,18 @@
 \- terminal multiplexer
 .SH SYNOPSIS
 .B tty8
+[CMD]
 .SH DESCRIPTION
 A simple terminal multiplexer.
+.SH KEY BINDINGS
+.TP
+.B ^k
+Switch to the next virtual terminal
+.TP
+.B ^j
+Switch to the previous virtual terminal
+.TP
+.B ^`
+Quit
 .SH AUTHOR
 Dima Krasner (dima@dimakrasner.com)
